--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
     <p id="demo2"></p>
 
-    <span>
+    <!-- <span>
       Assign three varible using [let,var and const keyword.] and the [let
       unique name should be camelcase letter and the value should be and array
       of foods], while the [const value should be an arithmetics operation which
       sum up four values and the answer should be 1195].
-    </span>
+    </span> -->
 
     <script src="main.js"></script>
   </body>
