--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <title>Javascript Tutorials</title>
   </head>
   <body>
-    <h1>Hello World</h1>
+    <h1>Solution to assignment</h1>
 
-    <p id="demo2"></p>
+    <ol>
+      <li>PI = <span id="demo"></span></li>
+      <li>Arithmetics operation answer = <span id="demo2"></span></li>
+      <li>Countries = <span id="demo3"></span></li>
+      <li>Age = <span id="demo4"></span> years</li>
+      <li>My name is <span id="firstName"></span> <span id="lastName"></span></li>
+    </ol>
 
     <!-- <span>
       Assign three varible using [let,var and const keyword.] and the [let
