added some stuff

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
       <li>Arithmetics operation answer = <span id="demo2"></span></li>
       <li>Countries = <span id="demo3"></span></li>
       <li>Age = <span id="demo4"></span> years</li>
-      <li>My name is <span id="firstName"></span> <span id="lastName"></span></li>
+      <li>
+        My name is <span id="firstName"></span> <span id="lastName"></span>
+      </li>
     </ol>
 
     <!-- <span>
