created css file

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Javascript Tutorials</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Solution to assignment</h1>
+    <!-- <h1>Solution to assignment</h1>
 
     <ol>
       <li>PI = <span id="demo"></span></li>
@@ -17,7 +18,7 @@
       <li>
         My name is <span id="firstName"></span> <span id="lastName"></span>
       </li>
-    </ol>
+    </ol>-->
 
     <!-- <span>
       Assign three varible using [let,var and const keyword.] and the [let
@@ -25,6 +26,9 @@
       of foods], while the [const value should be an arithmetics operation which
       sum up four values and the answer should be 1195].
     </span> -->
+
+
+
 
     <script src="main.js"></script>
   </body>
