--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Javascript Tutorials</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <!-- <h1>Solution to assignment</h1>
@@ -27,8 +27,22 @@
       sum up four values and the answer should be 1195].
     </span> -->
 
-
-
+    <div class="container">
+      <div class="equation">
+        <ol>
+          <li>
+            Equation 1
+            <p>Solution</p>
+            <p>
+              let x = 5 <br />
+              let a = 4 <br />
+              let b = 2
+            </p>
+            <p>Answer = x * a + b = <b id="demo"></b></p>
+          </li>
+        </ol>
+      </div>
+    </div>
 
     <script src="main.js"></script>
   </body>
