--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
           </li>
         </ol>
       </div>
+      <p id="time"></p>
+      <button id="btn">Click to display Date</button>
     </div>
 
     <script src="main.js"></script>
